feat: sync iOS and Android versions with npm version

--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "update-build": "npm run update-transit && npm run build",
     "update-transit": "tsx scripts/updateTransitFeeds.ts",
     "sync": "npm run build && CAPACITOR_LIVE_RELOAD_URL= npx cap sync",
-    "sync:live": "CAPACITOR_LIVE_RELOAD_URL=http://$(ipconfig getifaddr en0):3210 npx cap sync",
+    "sync-live": "CAPACITOR_LIVE_RELOAD_URL=http://$(ipconfig getifaddr en0):3210 npx cap sync",
     "assets": "npx @capacitor/assets generate --iconBackgroundColor '#11ab75' --splashBackgroundColor '#11ab75' --splashBackgroundColorDark '#11ab75'",
-    "open:android": "npx cap open android",
-    "open:ios": "npx cap open ios"
+    "open-android": "npx cap open android",
+    "open-ios": "npx cap open ios",
+    "version": "sh scripts/version.sh"
   },
   "dependencies": {
     "@capacitor/app": "^6.0.2",
