feat(realtime): add GTFS-RT live trip updates, service alerts, and notification panel

--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   "scripts": {
     "prebuild": "tsx scripts/publishScheduleData.ts",
     "build": "tsc --noEmit && vite build",
+    "build:native": "tsc --noEmit && vite build --mode native",
     "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview",
     "update-build": "npm run update-transit && npm run build",
     "update-transit": "tsx scripts/updateTransitFeeds.ts",
-    "sync": "npm run build && CAPACITOR_LIVE_RELOAD_URL= npx cap sync",
+    "sync": "npm run build:native && CAPACITOR_LIVE_RELOAD_URL= npx cap sync",
     "sync-live": "CAPACITOR_LIVE_RELOAD_URL=http://$(ipconfig getifaddr en0):3210 npx cap sync",
     "assets": "npx @capacitor/assets generate --iconBackgroundColor '#11ab75' --splashBackgroundColor '#11ab75' --splashBackgroundColorDark '#14161A'",
     "open-android": "npx cap open android",
@@ -70,6 +71,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gtfs-realtime-bindings": "^1.1.1",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.462.0",
@@ -89,6 +91,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vercel/node": "^5.6.6",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "adm-zip": "^0.5.12",
     "autoprefixer": "^10.4.20",
