--- a/tsconfig.api.json
+++ b/tsconfig.api.json
@@ -7,6 +7,7 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true
   },
