--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "preview": "vite preview",
     "update-build": "npm run update-transit && npm run build",
     "update-transit": "tsx scripts/updateTransitFeeds.ts",
-    "sync": "npm run build:native && CAPACITOR_LIVE_RELOAD_URL= npx cap sync",
+    "sync": "npm run build-native && CAPACITOR_LIVE_RELOAD_URL= npx cap sync",
     "sync-live": "CAPACITOR_LIVE_RELOAD_URL=http://$(ipconfig getifaddr en0):3210 npx cap sync",
     "assets": "npx @capacitor/assets generate --iconBackgroundColor '#11ab75' --splashBackgroundColor '#11ab75' --splashBackgroundColorDark '#14161A'",
     "open-android": "npx cap open android",
